  * Use debhelper compatibility level 12:
    - Build-Depend on debhelper-compat and remove debian/compat
    - hyperv-daemons: Use dh_installsystemd instead of
      dh_systemd_{enable,start}
    - hyperv-daemons: Add "Pre-Depends: ${misc:Pre-Depends}"
  * debian/README.source: Refer to upload checklist in kernel-team.git
  * [armel] Disable NETLABEL, since SECURITY_SELINUX is also disabled

  [ Romain Perier ]
  *  Rebased patch firmware-remove-redundant-log-messages-from-drivers.patch
     onto 5.6.7.

  [ Philip Rinn ]
  * [arm64] Enable CRYPTO_DEV_SUN8I_CE (closes: #958037)
  * [arm64] Enable SUN8I_THERMAL

  [ Roberto Bampi ]
  * [arm64] Enable ARMADA_37XX_WATCHDOG as module

  [ Vagrant Cascadian ]
  * [arm64] Enable SENSORS_PWM_FAN as a module.

  [ Paul Tagliamonte ]
  * Enable CONFIG_NETLABEL (Closes: #958804)

 -- Ben Hutchings <benh@debian.org>  Sat, 18 Apr 2020 23:49:45 +0100

linux (5.6.4-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_5.6
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.1
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.2
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.4

  [ Ben Hutchings ]
  * Set ABI to trunk
  * [mips*] Revert "staging: octeon-usb: delete the octeon usb host controller
    driver"
  * [mips*] Revert "staging: octeon: delete driver"
  * [powerpc*] i2c: Enable I2C_PARPORT instead of I2C_PARPORT_LIGHT
  * aufs: Update support patchset to aufs5.x-rcN 20200302; no functional
    change
  * linux-signed-*: Build-Depend on kernel-wedge 2.102 for consistency
  * aufs: Update support patchset to aufs5.6 20200413; no functional change
  * [rt] Update to 5.6.4-rt3 and re-enable

  [ Aurelien Jarno ]
  * Enable SENSORS_DRIVETEMP
  * [riscv64] Enable SOC_VIRT
  * [riscv64] Enable GPIOLIB, GPIO_SIFIVE, POWER_RESET, POWER_RESET_GPIO,