@@ -70,7 +70,6 @@ build-arch-arch: \
 	$(call if_package, libtraceevent-dev,            build-libtraceevent)
 binary-arch-arch: \
 	$(call if_package, $(SOURCE_BASENAME)-config-$(VERSION), install-config_$(ARCH)) \
-	$(call if_package, linux-headers-$(ABINAME)-all, install-headers_$(ARCH)) \
 	$(call if_package, linux-libc-dev,               install-libc-dev_$(ARCH)) \
 	$(call if_package, linux-kbuild-$(VERSION),      install-kbuild) \
 	$(call if_package, linux-perf-$(VERSION),        install-perf) \
@@ -290,13 +289,6 @@ install-doc-meta:
 	dh_testdir
 	dh_prep
 	+$(MAKE_SELF) install-base
-
-install-headers_$(ARCH): PACKAGE_NAMES = linux-headers-$(ABINAME)-all linux-headers-$(ABINAME)-all-$(ARCH)
-install-headers_$(ARCH): DH_OPTIONS = $(foreach p, $(PACKAGE_NAMES), -p$(p))
-install-headers_$(ARCH):
-	dh_testdir
-	dh_testroot
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='-Vkernel:Arch=$(ARCH)'
 
 install-common-headers_$(FEATURESET): PACKAGE_NAME = linux-headers-$(ABINAME)-common$(LOCALVERSION)
 install-common-headers_$(FEATURESET): PACKAGE_NAME_KBUILD = linux-kbuild-$(VERSION)
