@@ -16,6 +16,8 @@ linux (5.6.7-1~exp1) UNRELEASED; urgency=medium
     - hyperv-daemons: Add "Pre-Depends: ${misc:Pre-Depends}"
   * debian/README.source: Refer to upload checklist in kernel-team.git
   * [armel] Disable NETLABEL, since SECURITY_SELINUX is also disabled
+  * Drop linux-headers-<ver>-all and linux-headers-<ver>-all-<arch> packages,
+    which are no longer needed
 
   [ Romain Perier ]
   *  Rebased patch firmware-remove-redundant-log-messages-from-drivers.patch
